--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -7,18 +7,14 @@
   </head>
   <body style="background-color: #FCB6FC">
     <hr>
-    <div style="text-align: center">
+    <div class="intro" style="text-align: center">
       <img src="ValetHeading.png" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
       <hr>
       <hr>
       <br>
       <a href=""><img src="valet1.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet2.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet3.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet4.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet5.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet6.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet7.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+     
       <a href=""><img src="valet8.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet9.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet10.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
@@ -47,6 +43,42 @@
       <a href=""><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <div class="para1" style="text-align: center">
+    dear se chamak
+      <a href=""><img src="valet3.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet4.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet5.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet6.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet7.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
+    <hr>
+    <div class="para2" style="text-align: center">
+    aap jaisa to bahut saare
+    </div>
+    <hr>
+    <hr>
+    <div class="para3" style="text-align: center">
+    mai ache se to kaabu karte ho
+    </div>
+    <hr>
+    <hr>
+    <div class="para4" style="text-align: center">
+    mai bhagwaan to pyaar banke
+    </div>
+    <hr>
+    <hr>
+    <div class="para5" style="text-align: center">
+    mann to kiska hu
+    </div>
+    <hr>
+    <hr>
+    <div class="para6" style="text-align: center">
+    propose
+    </div>
+    <hr>
+    <hr>
+    <div class="para7" style="text-align: center">
+    extended
+    </div>
+    <hr>
   </body>
 </html>
