--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -73,6 +73,8 @@
     <div class="para5" style="text-align: center">
     <!--what you are to kiska hu-->
       <a href=""><img src="valet30.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><button style=" font-size:3vw"><img src="vBtnY.png" alt="YES! :)" style="width: 90%; hieght: auto"></button></a>  
+      <a href=""><button style=" font-size:3vw"><img src="vBtnN.png" alt="NO! :(" style="width: 90%; hieght: auto"></button></a>
       <a href=""><img src="valet31.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
