--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -81,8 +81,8 @@
     <div class="para6" style="text-align: center">
       <!--ask out-->
       <a href=""><img src="valet32.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><button style=" font-size:3vw"><img src="vBtnY.png" alt="YES! :)" style="width: 30%; hieght: auto; position: relative; left: 10%"></button></a>  
-      <a href=""><button style=" font-size:3vw"><img src="vBtnN.png" alt="NO! :(" style="width: 30%; hieght: auto; position: relative; right: 10%"></button></a>
+      <a href=""><button style=" font-size:3vw"><img src="vBtnY.png" alt="YES! :)" style="width: 30%; hieght: auto"></button></a>  
+      <a href=""><button style=" font-size:3vw"><img src="vBtnN.png" alt="NO! :(" style="width: 30%; hieght: auto"></button></a>
       <a href=""><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
