--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -27,6 +27,7 @@
       <a href=""><img src="valet7.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
+    <div style="text-align: center"><img src="valentine.jpg" alt="Couldn't load our memory :/" style="width: 90%; hieght: auto"></div>
     <hr>
     <br>
     <div class="para2" style="text-align: center">
