--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -31,7 +31,7 @@
     <hr>
     <br>
     <div class="para2" style="text-align: center">
-    <!--aap jaisa to bahut saare-->
+    <!--aap jaisa to duniya-->
       <a href=""><img src="valet8.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet9.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet10.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
@@ -47,6 +47,26 @@
       <a href=""><img src="valet20.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
+    <div style="text-align: center">
+       <figure>
+                <video
+                    autoplay
+                    controls
+                    hieght = "80%"
+                    width = "80%"
+                    muted
+                    loop
+                >   
+                    <source src="valet.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                  We look HOT!
+                </figcaption>
+                <br>
+                <br>
+       </figure>
+    </div>
     <hr>
     <br>
     <div class="para3" style="text-align: center">
@@ -87,6 +107,26 @@
       <a href=""><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
+    <div style="text-align: center">
+       <figure>
+                <video
+                    autoplay
+                    controls
+                    hieght = "80%"
+                    width = "80%"
+                    muted
+                    loop
+                >   
+                    <source src="valet2nd.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                  NO! bola toh kaat lunga..Nhi mat bol dena bata raha hu {!WARNING!}
+                </figcaption>
+                <br>
+                <br>
+       </figure>
+    </div>
     <hr>
     <br>
     <div class="para7" style="text-align: center">
