--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -80,7 +80,7 @@
     <hr>
     <br>
     <div class="para4" style="text-align: center">
-    <!--apke heere to kar saku-->
+    <!--apke heere to bta saku-->
       <a href=""><img src="valet24.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet25.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet26.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
@@ -89,6 +89,7 @@
       <a href=""><img src="valet29.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
+     <div style="text-align: center"><img src="valentine2.jpg" alt="Couldn't load our memory :/" style="width: 90%; hieght: auto"></div>
     <hr>
     <br>
     <div class="para5" style="text-align: center">
