--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -61,7 +61,7 @@
                     
                 </video>
                 <figcaption>
-                  We look HOT!
+                  Meri duniya!!
                 </figcaption>
                 <br>
                 <br>
@@ -89,7 +89,26 @@
       <a href=""><img src="valet29.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
-     <div style="text-align: center"><img src="valentine2.jpg" alt="Couldn't load our memory :/" style="width: 90%; hieght: auto"></div>
+     <div style="text-align: center">
+       <figure>
+                <video
+                    autoplay
+                    controls
+                    hieght = "80%"
+                    width = "80%"
+                    muted
+                    loop
+                >   
+                    <source src="valet4.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                  Meri chaandni!!
+                </figcaption>
+                <br>
+                <br>
+       </figure>
+    </div>
     <hr>
     <br>
     <div class="para5" style="text-align: center">
