--- a/novalet.html
+++ b/novalet.html
@@ -13,9 +13,9 @@
                 <audio
                     autoplay
                     controls
-                    src="maanMeriJaan.mp3"
+                    src="maanMeriJaan.mp3#t=30,75"
                 >
-                    Not supported
+                    
                 </audio> 
                 <figcaption style="font-size: 3vw">
                   Maan jaao na meri jaan, please. Confirm kar do neeche....nhi maani toh :[
@@ -25,7 +25,7 @@
        </figure>
     </div>
 <hr>
-<p style="text-align:center; font-size:3vw">Abhi bhi 'Na' hai!?...Soch lo Chaturvedi! (Trying to manioulate one last time.)</p>
+<p style="text-align:center; font-size:3vw">Abhi bhi 'Na' hai!?...Soch lo Chaturvedi! (Trying to manipulate one last time.)</p>
 <hr>
 <div style="text-align:center">
 <a href="" target="_blank"><button style=" font-size:3vw"><img src="vBtnN.png" alt="NO :(" style="width: 90%; hieght: auto"></button></a>
