--- a/yesvalet.html
+++ b/yesvalet.html
@@ -14,14 +14,13 @@
                     controls
                     hieght = "80%"
                     width = "80%"
-                    muted
                     loop
                 >   
                     <source src="valet3.mp4" type="video/mp4"/>
                     
                 </video>
                 <figcaption style="font-size: 3vw">
-                  Really YES??? - Thank you, please watch this video and then please do confirm your Yes below!
+                  Really YES??? - Thank you, please watch this video (UNMUTE KARLENA SONIYE) and then please do confirm your Yes below!
                 </figcaption>
                 <br>
                 <br>
