--- a/yesvalet.html
+++ b/yesvalet.html
@@ -30,7 +30,8 @@
 <p style="text-align:center; font-size:3vw">Confirm YES!?</p>
 <hr>
 <div style="text-align:center">
-<a href="" target="_blank"><button style=" font-size:3vw"><img src="vBtnY.png" alt="YES :)" style="width: 90%; hieght: auto"></button></a>
+<a href="https://api.whatsapp.com/send?phone="+917232917989"&text="I love you, Akash. It's a YES!"" target="_blank"><button style=" font-size:3vw">Confirm on Whatsapp!</button></a>
+<a href="https://telegram.me/share/url?url=t.me/Akash0Pandey&text="I%20love%20you,%20Akash.%20It's%20a%20YES!"" target="_blank"><button style=" font-size:3vw">Confirm on Telegram!</button></a>
 </div>
   
 <p></p>
