--- a/novalet.html
+++ b/novalet.html
@@ -28,8 +28,8 @@
 <p style="text-align:center; font-size:3vw">Abhi bhi 'Na' hai!?...Soch lo Chaturvedi! (Trying to manipulate one last time.)</p>
 <hr>
 <div style="text-align:center">
-<a href="" target="_blank"><button style=" font-size:3vw"><img src="vBtnN.png" alt="NO :(" style="width: 90%; hieght: auto"></button></a>
-</div>
+<a href="https://api.whatsapp.com/send?phone="+917232917989"&text="Sorry, Akash. It's a NO!"" target="_blank"><button style=" font-size:3vw">Confirm on Whatsapp!</button></a>
+<a href="https://telegram.me/share/url?url=t.me/Akash0Pandey&text="Sorry,%20Akash.%20It's%20a%20NO!"" target="_blank"><button style=" font-size:3vw">Confirm on Telegram!</button></a>
   
 <p></p>
 <p></p>
