--- a/novalet.html
+++ b/novalet.html
@@ -2,6 +2,13 @@
 <html>
 <head><meta charset="UTF-8">
 <link rel="stylesheet" href="normalize.css" media="screen" />
+<script>
+       function confirmWhatsapp(){
+              window.location.href = "https://api.whatsapp.com/send?phone=+917232917989&text=Sorry, Akash. It's a NO!";
+       function confirmTelegram(){
+              window.location.href = "https://telegram.me/share/url?url=t.me/Akash0Pandey&text=Sorry,%20Akash.%20It's%20a%20NO!";
+       }
+</script>
 </head>
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Valentine's Day my love!!</h1>
@@ -28,7 +35,7 @@
 <p style="text-align:center; font-size:3vw">Abhi bhi 'Na' hai!?...Soch lo Chaturvedi! (Trying to manipulate one last time.)</p>
 <hr>
 <div style="text-align:center">
-<a href="https://api.whatsapp.com/send?phone="+917232917989"&text="Sorry, Akash. It's a NO!"" target="_blank"><button style=" font-size:3vw">Confirm on Whatsapp!</button></a>
+<button style=" font-size:3vw" onclick="confirmWhatsapp()">Confirm on Whatsapp!</button>
 <a href="https://telegram.me/share/url?url=t.me/Akash0Pandey&text="Sorry,%20Akash.%20It's%20a%20NO!"" target="_blank"><button style=" font-size:3vw">Confirm on Telegram!</button></a>
   
 <p></p>
