--- a/novalet.html
+++ b/novalet.html
@@ -36,7 +36,7 @@
 <hr>
 <div style="text-align:center">
 <button style=" font-size:3vw" onclick="confirmWhatsapp()">Confirm on Whatsapp!</button>
-<a href="https://telegram.me/share/url?url=t.me/Akash0Pandey&text="Sorry,%20Akash.%20It's%20a%20NO!"" target="_blank"><button style=" font-size:3vw">Confirm on Telegram!</button></a>
+<button style=" font-size:3vw" onclick="confirmTelegram()">Confirm on Telegram!</button>
   
 <p></p>
 <p></p>
