--- a/yesvalet.html
+++ b/yesvalet.html
@@ -2,6 +2,13 @@
 <html>
 <head><meta charset="UTF-8">
 <link rel="stylesheet" href="normalize.css" media="screen" />
+<script>
+       function confirmWhatsapp(){
+              window.location.href = "https://api.whatsapp.com/send?phone=+917232917989&text=I love you, Akash. It's a YES!";
+       function confirmTelegram(){
+              window.location.href = "https://telegram.me/share/url?url=t.me/Akash0Pandey&text=I%20love%20you,%20Akash.%20It's%20a%20YES!";
+       }
+</script>
 </head>
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Valentine's Day my love!!</h1>
@@ -30,8 +37,8 @@
 <p style="text-align:center; font-size:3vw">Confirm YES!?</p>
 <hr>
 <div style="text-align:center">
-<a href="https://api.whatsapp.com/send?phone="+917232917989"&text="I love you, Akash. It's a YES!"" target="_blank"><button style=" font-size:3vw">Confirm on Whatsapp!</button></a>
-<a href="https://telegram.me/share/url?url=t.me/Akash0Pandey&text="I%20love%20you,%20Akash.%20It's%20a%20YES!"" target="_blank"><button style=" font-size:3vw">Confirm on Telegram!</button></a>
+<button style=" font-size:3vw" onclick="confirmWhatsapp()">Confirm on Whatsapp!</button>
+<button style=" font-size:3vw" onclick="confirmTelegram()">Confirm on Telegram!</button>
 </div>
   
 <p></p>
