--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -5,7 +5,7 @@
     <title>THE VALENTINE</title>
     <link rel="stylesheet" href="normalize.css" media="screen" />
   </head>
-  <body style="background-color: #FCB6FC">
+  <body style="background-color: #ffccff">
     <hr>
     <div class="intro" style="text-align: center">
       <img src="ValetHeading.png" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
@@ -13,7 +13,7 @@
       <hr>
       <br>
       <a href=""><img src="valet1.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet2.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/0tgVpDi06FyKpA1z0VMD4v?si=aXz1naNRRAmtPLRo8W4Kbw"><img src="valet2.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
     <hr>
@@ -22,9 +22,9 @@
     <!--dear se chamak-->
       <a href=""><img src="valet3.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet4.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet5.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/5fq7CGNYZKJm38HbLwMg9h?si=Vt50ovEvQvWk92uumoKVGQ"><img src="valet5.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet6.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet7.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/2NTVtNcpC0i1R7LVGaCZCF?si=_0iCGOYrTnSn87QgN619BQ"><img src="valet7.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
     <div style="text-align: center"><img src="valentine.jpg" alt="Couldn't load our memory :/" style="width: 90%; hieght: auto"></div>
@@ -32,15 +32,15 @@
     <br>
     <div class="para2" style="text-align: center">
     <!--aap jaisa to duniya-->
-      <a href=""><img src="valet8.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet9.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/5IHIHetzeMtr254lfnFUox?si=YR6k0sxDRbuxsG6A0moW7w"><img src="valet8.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/7Hkbm2DgepcriVxDrwbCcc?si=VXJKHLf0TNirDSym8pylsw"><img src="valet9.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet10.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet11.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/5B29YNjG7dx0GfU19ZBEpo?si=o2qbIWIkT9ydtZTOR3shjQ"><img src="valet11.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet12.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet13.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet14.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/1ccZZf0IQi5y0bHMl2aGDF?si=jDknxQmCRdyLk8HaYoEd2Q"><img src="valet13.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/190P8pyw8J4gr6ygwUlG3z?si=vHj67A2ATmO-QLocH5izcg"><img src="valet14.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet15.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet16.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/0og9wKFGgFFNQnrBe7eisG?si=oVSbco3uQr2TVeSY8Tyz5A"><img src="valet16.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet17.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet18.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet19.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
