--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -41,10 +41,10 @@
       <a href="https://open.spotify.com/track/190P8pyw8J4gr6ygwUlG3z?si=vHj67A2ATmO-QLocH5izcg"><img src="valet14.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet15.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href="https://open.spotify.com/track/0og9wKFGgFFNQnrBe7eisG?si=oVSbco3uQr2TVeSY8Tyz5A"><img src="valet16.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet17.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/2rWYfMbQgHYXPEzbhN65Ys?si=NZ8xTek0SBmtLu5dC4Lg3w"><img src="valet17.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet18.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet19.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet20.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/2Fv2injs4qAm8mJBGaxVKU?si=G5wgUaDWTPykdedQxrUIEw"><img src="valet19.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/2tjWCe2W7sgvS3C8NHcdtI?si=IluULXeGScuSjpwGrh7IMQ"><img src="valet20.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
     <div style="text-align: center">
@@ -72,8 +72,7 @@
     <div class="para3" style="text-align: center">
     <!--halaki mai se to kaabu karte ho-->
       <a href=""><img src="valet21.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet21.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet22.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/6KtSNVgCmQEvDgIuHoXAkT?si=a-OiTX2TT5exr05GG8uPRQ%0A"><img src="valet22.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet23.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
@@ -82,10 +81,10 @@
     <div class="para4" style="text-align: center">
     <!--apke heere to bta saku-->
       <a href=""><img src="valet24.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet25.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet26.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet27.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href=""><img src="valet28.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/3jNAbt95cAN8Z3LzMPfoUp?si=SpJlROnBQ1ewcI_xQG-usg"><img src="valet25.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/06WBL2qDIabVl2Q1gpNvOa?si=cQt8sinhQ6-rNAXiSk7fDw"><img src="valet26.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/3yHyiUDJdz02FZ6jfUbsmY?si=HEptfjEiT_mvfj5ADzUbDg"><img src="valet27.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/0es02Rp0p0WpC4WRBDtM8P?si=5Y_tMWC7Roa3fqlMrBvlUA"><img src="valet28.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet29.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
@@ -113,7 +112,7 @@
     <br>
     <div class="para5" style="text-align: center">
     <!--what you are to kiska hu-->
-      <a href=""><img src="valet30.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/4cluDES4hQEUhmXj6TXkSo?si=Zjrr-0STQHWGYukbzqtn_w"><img src="valet30.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet31.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
@@ -124,7 +123,7 @@
       <a href=""><img src="valet32.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href="yesvalet.html"><button style=" font-size:3vw"><img src="vBtnY.png" alt="YES! :)" style="width: 80%; hieght: auto"></button></a>  
       <a href="novalet.html"><button style=" font-size:3vw"><img src="vBtnN.png" alt="NO! :(" style="width: 80%; hieght: auto"></button></a>
-      <a href=""><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href="https://open.spotify.com/track/3X5Jbz7VhZfbPqIRmYIj8c?si=sD4VA-RtTr-ievPu3Mc8sA"><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
     <div style="text-align: center">
