--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -121,8 +121,8 @@
     <div class="para6" style="text-align: center">
       <!--ask out-->
       <a href=""><img src="valet32.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-      <a href="yesvalet.html"><button style=" font-size:3vw"><img src="vBtnY.png" alt="YES! :)" style="width: 80%; hieght: auto"></button></a>  
-      <a href="novalet.html"><button style=" font-size:3vw"><img src="vBtnN.png" alt="NO! :(" style="width: 80%; hieght: auto"></button></a>
+      <a href="yesvalet.html"><button style=" font-size:1vw"><img src="vBtnY.png" alt="YES! :)" style="width: 80%; hieght: auto"></button></a>  
+      <a href="novalet.html"><button style=" font-size:1vw"><img src="vBtnN.png" alt="NO! :(" style="width: 80%; hieght: auto"></button></a>
       <a href="https://open.spotify.com/track/3X5Jbz7VhZfbPqIRmYIj8c?si=sD4VA-RtTr-ievPu3Mc8sA"><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
@@ -148,8 +148,16 @@
     </div>
     <hr>
     <br>
-    <div class="para7" style="text-align: center">
-    <!--extended-->
+    <div class="note" style="text-align: center">
+    <!--Note-->
+      <a href=""><img src="valetNote.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+    </div>
+    <hr>
+    <hr>
+    <br>
+    <div class="chal" style="text-align: center">
+    <!--Challenge-->
+      <a href=""><img src="valetChallenge.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
     <hr>
