--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>THE VALENTINE</title>
     <link rel="stylesheet" href="normalize.css" media="screen" />
+    <link rel="stylesheet" href="valentineDay24.css" media="screen" />
   </head>
   <body style="background-color: #ffccff">
     <hr>
