--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -8,6 +8,10 @@
   </head>
   <body style="background-color: #ffccff">
     <hr>
+    <div style="text-align: center">
+     <img src="ValetHeading.png" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
+    </div>  
+    <hr>
     <div class="intro" style="text-align: center">
       <img src="ValetHeading.png" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
       <hr>
