--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="normalize.css" media="screen" />
     <link rel="stylesheet" href="valentineDay24.css" media="screen" />
   </head>
-  <body style="background-color: #ffccff">
+  <body style="background-color: #E2AFFF">
     <hr>
     <div style="text-align: center">
      <img src="ValetHeading.png" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
