--- a/yesvalet.html
+++ b/yesvalet.html
@@ -33,6 +33,14 @@
 <div style="text-align:center">
 <a href="https://shorturl.at/jnoCQ" target="_blank"><button style=" font-size:3vw" >Confirm on Whatsapp!</button></a>
 <a href="https://shorturl.at/nxLNZ" target="_blank"><button style=" font-size:3vw" >Confirm on Telegram!</button></a>
+<hr>
+<p></p>
+<p></p>
+<p style="font-size: 5vw">Attention Darling!</p>
+<p style="font-size: 3vw">If using whatsapp, do it with your Phone(not iPad) - prefer</p>
+<p style="font-size: 3vw">If using telegram, make sure that your telegram is logged on from your account or number!</p>
+<p style="font-size: 5vw">Request Darling! - </p>
+<p style="font-size: 3vw">Please confirm zarur kar dena--:} bas ek jagah kaafi hai!!</p>
 </div>
   
 <p></p>
