--- a/novalet.html
+++ b/novalet.html
@@ -31,7 +31,14 @@
 <div style="text-align:center">
 <a href="https://shorturl.at/afzS6" target="_blank"><button style=" font-size:3vw" >Confirm on Whatsapp!</button></a>
 <a href="https://shorturl.at/jBCJK" target="_blank"><button style=" font-size:3vw" >Confirm on Telegram!</button></a>
-  
+<hr>
+<p></p>
+<p></p>
+<p style="font-size: 5vw">Attention Darling!</p>
+<p style="font-size: 3vw">If using whatsapp, do it with your Phone(not iPad) - prefer</p>
+<p style="font-size: 3vw">If using telegram, make sure that your telegram is logged on from your account or number!</p>
+<p style="font-size: 5vw">Request Darling! - </p>
+<p style="font-size: 3vw">Please confirm zarur kar dena--:} bas ek jagah kaafi hai!!</p>  
 <p></p>
 <p></p>
 <hr>
