--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,8 @@
 <html lang = "en">
   <head>
     <title>Homepage</title>
-    <meta charset="UTF-8" http-equiv="refresh" content="0; url='hugday24.html'">
+    <meta charset="UTF-8" >
+    <!--http-equiv="refresh" content="0; url='hugday24.html'"-->
     <link rel="stylesheet" href="normalize.css" media="screen" />
   </head>
   <body>
@@ -27,6 +28,7 @@
         <li><a href="kissday24.html" style="font-size: 3vw">Kiss day 2024!</a></li>
         <li><a href="hugday24.html" style="font-size: 3vw">Hug day 2024!</a></li>
         <li><a href="valentineday24.html" style="font-size: 3vw">Valentine's Day 2024!</a></li>
+        <li><a href="theValentineDay.html" style="font-size: 3vw">Valentine's Day 2024!</a></li>
       </ol>
     </div>
     
