--- a/protector.html
+++ b/protector.html
@@ -148,8 +148,8 @@
     </div>
     <div id="attribution">
         <p>Made by Beeeeeeé for Mishti with LOVE!</p>
-
-<p>Last updated at: 13/02/2024 08:15</p>
+        <p>Last updated at: 14/02/2024 00:00</p>
+        <p>It's a heavy site today! - Let it load completely! Have patience!</p>
       </div>
 
     <script>
