--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
         <li><a href="promiseday24.html" style="font-size: 3vw">Promise day 2024!</a></li>
         <li><a href="kissday24.html" style="font-size: 3vw">Kiss day 2024!</a></li>
         <li><a href="hugday24.html" style="font-size: 3vw">Hug day 2024!</a></li>
-        <li><a href="valentineday24.html" style="font-size: 3vw">Valentine's Day 2024!</a></li>
+        <li><a href="valentineDay24.html" style="font-size: 3vw">Valentine's Day 2024!</a></li>
         <li><a href="theValentineDay.html" style="font-size: 3vw">Valentine's Day 2024!</a></li>
       </ol>
     </div>
