--- a/protector.html
+++ b/protector.html
@@ -149,7 +149,7 @@
     <div id="attribution">
         <p>Made by Beeeeeeé for Mishti with LOVE!</p>
         <p>Last updated at: 14/02/2024 00:00</p>
-        <p>It's a heavy site today! - Let it load completely! Have patience!</p>
+        <p>Note: It's a heavy site today! - Let it load completely! Have patience!</p>
       </div>
 
     <script>
