--- a/theValentineDay24.html
+++ b/theValentineDay24.html
@@ -164,6 +164,8 @@
       <a href=""><img src="valetChallenge.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
     <hr>
+<p style="text-align:left; font-size:4vw">
+NOTE: This is a heavy site! - Let it load completely! Have patience!</p>
     <hr>
     <br>
   </body>
