--- a/valentineDay24.html
+++ b/valentineDay24.html
@@ -2,6 +2,15 @@
 <html>
 <head><meta charset="UTF-8">
 <link rel="stylesheet" href="normalize.css" media="screen" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9593M5CGJK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9593M5CGJK');
+</script>
 </head>
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Valentine's Day my love!!</h1>
